// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<BulletText /> > should match snapshot for custom bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_display_flex_mobile__onxwju6l sprinkles_flexDirection_row_mobile__onxwjus1 sprinkles_flexWrap_nowrap_mobile__onxwjut5 sprinkles_gap_3_mobile__onxwjujd sprinkles_justifyContent_start_mobile__onxwjur9"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h sprinkles_flexShrink_0_mobile__onxwjusx"
    >
      <span>
        <span
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6d"
          data-od-component="icon"
        >
          <svg
            aria-hidden="true"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_width_full_mobile__onxwjui1 sprinkles_height_full_mobile__onxwjug1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 256 256"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M229.66 77.66l-128 128a8 8 0 0 1-11.32 0l-56-56a8 8 0 0 1 11.32-11.32L96 188.69 218.34 66.34a8 8 0 0 1 11.32 11.32z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjusp"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_lineHeight_4_mobile__onxwju99 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwju6d"
      >
        Hello World
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for default bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_display_flex_mobile__onxwju6l sprinkles_flexDirection_row_mobile__onxwjus1 sprinkles_flexWrap_nowrap_mobile__onxwjut5 sprinkles_gap_3_mobile__onxwjujd sprinkles_justifyContent_start_mobile__onxwjur9"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju6l sprinkles_position_relative_mobile__onxwju8h sprinkles_borderRadius_pill_mobile__onxwjuc9 sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_flexShrink_0_mobile__onxwjusx sprinkles_justifyContent_center_mobile__onxwjuqp BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjua1 sprinkles_lineHeight_2_mobile__onxwju91 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        •
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjusp"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_lineHeight_4_mobile__onxwju99 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwju6d"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for ordered bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_display_flex_mobile__onxwju6l sprinkles_flexDirection_row_mobile__onxwjus1 sprinkles_flexWrap_nowrap_mobile__onxwjut5 sprinkles_gap_3_mobile__onxwjujd sprinkles_justifyContent_start_mobile__onxwjur9"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju6l sprinkles_position_relative_mobile__onxwju8h sprinkles_borderRadius_pill_mobile__onxwjuc9 sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_flexShrink_0_mobile__onxwjusx sprinkles_justifyContent_center_mobile__onxwjuqp BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjua1 sprinkles_lineHeight_2_mobile__onxwju91 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjusp"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_lineHeight_4_mobile__onxwju99 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwju6d"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for primary bullet text with custom bullet character 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_display_flex_mobile__onxwju6l sprinkles_flexDirection_row_mobile__onxwjus1 sprinkles_flexWrap_nowrap_mobile__onxwjut5 sprinkles_gap_3_mobile__onxwjujd sprinkles_justifyContent_start_mobile__onxwjur9"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju6l sprinkles_position_relative_mobile__onxwju8h sprinkles_borderRadius_pill_mobile__onxwjuc9 sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_flexShrink_0_mobile__onxwjusx sprinkles_justifyContent_center_mobile__onxwjuqp BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjua1 sprinkles_lineHeight_2_mobile__onxwju91 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjusp"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_lineHeight_4_mobile__onxwju99 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwju6d"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for secondary bullet text with custom bullet character 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_display_flex_mobile__onxwju6l sprinkles_flexDirection_row_mobile__onxwjus1 sprinkles_flexWrap_nowrap_mobile__onxwjut5 sprinkles_gap_3_mobile__onxwjujd sprinkles_justifyContent_start_mobile__onxwjur9"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwju6l sprinkles_position_relative_mobile__onxwju8h sprinkles_borderRadius_pill_mobile__onxwjuc9 sprinkles_alignItems_center_mobile__onxwjup1 sprinkles_flexShrink_0_mobile__onxwjusx sprinkles_justifyContent_center_mobile__onxwjuqp BulletText_bullet__1o8gcm90 BulletText_secondary__1o8gcm92"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjua1 sprinkles_lineHeight_2_mobile__onxwju91 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 BulletText_secondaryText__1o8gcm94"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjusp"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_lineHeight_4_mobile__onxwju99 sprinkles_fontWeight_normal__onxwju5k typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwju6d"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;
